(fix): completed refractoring